...
          IconButton(
            icon: Icon(
              _editorMode == EditorMode.wysiwyg ? Icons.code : Icons.edit,
            ),
            onPressed: _toggleEditorMode,
            tooltip: _editorMode == EditorMode.wysiwyg
                ? 'HTML Mode'
                : 'WYSIWYG Mode',
          ),
          Padding(
            padding: const EdgeInsets.only(right: 8.0),
            child: shad.PrimaryButton(
              onPressed: _save,
...
